deploy/base/openehr-nodes/zio/etl-zib-rest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zio-etl-zib-rest
  namespace: dh-health
  labels:
    app: zio-etl-zib-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zio-etl-zib-rest
  template:
    metadata:
      labels:
        app: zio-etl-zib-rest
    spec:
      containers:
      - name: zio-etl-zib-rest
        image: registry.prod.dh.unimaas.nl/docker-health/etl-zib-rest:latest
        volumeMounts:
        - name: outputs
          mountPath: /code/outputs
          subPath: zio/rest
        - name: etl-logs
          mountPath: /code/logs/zio
          subPath: zio/rest
      volumes:
      - name: outputs
        persistentVolumeClaim:
          claimName: output-pvc
      - name: etl-logs
        persistentVolumeClaim:
          claimName: log-pvc
