deploy/base/openehr-nodes/zio/etl-zib-rest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zio-etl-zib-rest
  namespace: dh-health
spec:
  type: ClusterIP
  ports:
    - port: 8040
      targetPort: 8040
      protocol: TCP
  selector:
    app: zio-etl-zib-rest
